fix: remove some more preset dark mode stuff

--- a/examples/ui-demo/src/app/globals.css
+++ b/examples/ui-demo/src/app/globals.css
@@ -16,7 +16,7 @@
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
 
-    --secondary: 210 40% 96.1%;
+    --secondary: 215 19% 35%;
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --muted: 210 40% 96.1%;
